--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>ANKIT'S PORTFOLIO</h1>
 <h2>I am a web developer</h2>
 <hr>
-<H3><a href="http://127.0.0.1:5500/"  alt="movie ranking webpage" > MOVIE RANKING </a></H3>
+<H3><a href="http://127.0.0.1:3000/2.4 Movie Ranking Project/solution.html"  alt="movie ranking webpage" > MOVIE RANKING </a></H3>
 <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking webpage ">
 <H3><a href="http://127.0.0.1:3000/4.3 HTML Porfolio Project/public/birthday-invite.html" alt="birthday invite webpage">BIRTHDAY INVITE</a></H3>
 <img src="./assets/images/birthday-invite.png " height="200" alt="birthday invite">
@@ -18,19 +18,4 @@
 
 
 </body>
-</html><!-- TODO 1: Create the HTML Boilerplate -->
-
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</html>
